.antlr/ScriptLanguageParser.java
// Generated from /home/adam/projects/fordito/script-language/custom-script-language/ScriptLanguage.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ScriptLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PRINT=1, ABS=2, TIME=3, INT=4, DOUBLE=5, FOR=6, WHILE=7, BREAK=8, CONTINUE=9, 
		IF=10, THEN=11, ELSE=12, SWITCH=13, CASE=14, DEFAULT=15, SEMICOLON=16, 
		ADD=17, SUB=18, MUL=19, DIV=20, LPAR=21, RPAR=22, LBRACE=23, RBRACE=24, 
		KERDOJEL=25, ASSIGN=26, EQUALS=27, LESSTHEN=28, GREATERTHEN=29, COLON=30, 
		COMMA=31, VARNAME=32, NUMBER=33, WHITESPACE=34, NEWLINE=35;
	public static final int
		RULE_program = 0, RULE_command = 1, RULE_controlStructures = 2, RULE_declaration = 3, 
		RULE_assignment = 4, RULE_ifStatement = 5, RULE_shortIfStatement = 6, 
		RULE_switchCaseStatement = 7, RULE_forLoop = 8, RULE_whileLoop = 9, RULE_exp = 10, 
		RULE_addop = 11, RULE_mulop = 12, RULE_fct = 13;
	public static final String[] ruleNames = {
		"program", "command", "controlStructures", "declaration", "assignment", 
		"ifStatement", "shortIfStatement", "switchCaseStatement", "forLoop", "whileLoop", 
		"exp", "addop", "mulop", "fct"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'print'", "'ABS'", "'TIME'", "'int'", "'double'", "'for'", "'while'", 
		"'break'", "'continue'", "'if'", "'then'", "'else'", "'switch'", "'case'", 
		"'default'", "';'", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "'{'", "'}'", 
		"'?'", "'='", "'=='", "'<'", "'>'", "':'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PRINT", "ABS", "TIME", "INT", "DOUBLE", "FOR", "WHILE", "BREAK", 
		"CONTINUE", "IF", "THEN", "ELSE", "SWITCH", "CASE", "DEFAULT", "SEMICOLON", 
		"ADD", "SUB", "MUL", "DIV", "LPAR", "RPAR", "LBRACE", "RBRACE", "KERDOJEL", 
		"ASSIGN", "EQUALS", "LESSTHEN", "GREATERTHEN", "COLON", "COMMA", "VARNAME", 
		"NUMBER", "WHITESPACE", "NEWLINE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ScriptLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private java.util.Map<String,Double> ids = new java.util.TreeMap<String,Double>();
	    
	    public static void main(String[] args) throws Exception {
	        ScriptLanguageLexer lex = new ScriptLanguageLexer(new ANTLRFileStream(args[0]));
	        CommonTokenStream tokens = new CommonTokenStream(lex);
	        ScriptLanguageParser parser = new ScriptLanguageParser(tokens);
	        parser.program();
	    }

	public ScriptLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public CommandContext command;
		public TerminalNode EOF() { return getToken(ScriptLanguageParser.EOF, 0); }
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		 ast.Program p = new ast.Program(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(28);
				((ProgramContext)_localctx).command = command();
				 p.addExpression(((ProgramContext)_localctx).command.value); 
				}
				}
				setState(33); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << INT) | (1L << DOUBLE) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << SWITCH) | (1L << LPAR) | (1L << VARNAME))) != 0) );
			setState(35);
			match(EOF);
			}
			_ctx.stop = _input.LT(-1);
			 p.evaluate(); 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public ast.Expression value;
		public AssignmentContext fstop;
		public DeclarationContext nxtop;
		public ExpContext nxtop2;
		public ExpContext nxtop3;
		public ControlStructuresContext controlStructures;
		public TerminalNode SEMICOLON() { return getToken(ScriptLanguageParser.SEMICOLON, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public TerminalNode PRINT() { return getToken(ScriptLanguageParser.PRINT, 0); }
		public TerminalNode LPAR() { return getToken(ScriptLanguageParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(ScriptLanguageParser.RPAR, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ScriptLanguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ScriptLanguageParser.COMMA, i);
		}
		public ControlStructuresContext controlStructures() {
			return getRuleContext(ControlStructuresContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_command);
		int _la;
		try {
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				((CommandContext)_localctx).fstop = assignment();
				setState(38);
				match(SEMICOLON);
				((CommandContext)_localctx).value =  ((CommandContext)_localctx).fstop.value;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				((CommandContext)_localctx).nxtop = declaration();
				setState(42);
				match(SEMICOLON);
				((CommandContext)_localctx).value =  ((CommandContext)_localctx).nxtop.value;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(45);
				match(PRINT);
				setState(46);
				match(LPAR);
				((CommandContext)_localctx).value =  new ast.Print();
				setState(48);
				((CommandContext)_localctx).nxtop2 = exp();
				((ast.Print)_localctx.value).addExpression(((CommandContext)_localctx).nxtop2.value);
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(50);
					match(COMMA);
					setState(51);
					((CommandContext)_localctx).nxtop3 = exp();
					((ast.Print)_localctx.value).addExpression(((CommandContext)_localctx).nxtop3.value);
					}
					}
					setState(58);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(59);
				match(RPAR);
				setState(60);
				match(SEMICOLON);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(62);
				((CommandContext)_localctx).controlStructures = controlStructures();
				((CommandContext)_localctx).value =  ((CommandContext)_localctx).controlStructures.value;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ControlStructuresContext extends ParserRuleContext {
		public ast.Expression value;
		public IfStatementContext ifStatement;
		public ShortIfStatementContext shortIfStatement;
		public SwitchCaseStatementContext switchCaseStatement;
		public ForLoopContext forLoop;
		public WhileLoopContext whileLoop;
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ShortIfStatementContext shortIfStatement() {
			return getRuleContext(ShortIfStatementContext.class,0);
		}
		public SwitchCaseStatementContext switchCaseStatement() {
			return getRuleContext(SwitchCaseStatementContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public ControlStructuresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controlStructures; }
	}

	public final ControlStructuresContext controlStructures() throws RecognitionException {
		ControlStructuresContext _localctx = new ControlStructuresContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_controlStructures);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				((ControlStructuresContext)_localctx).ifStatement = ifStatement();
				((ControlStructuresContext)_localctx).value =  ((ControlStructuresContext)_localctx).ifStatement.value;
				}
				break;
			case LPAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				((ControlStructuresContext)_localctx).shortIfStatement = shortIfStatement();
				((ControlStructuresContext)_localctx).value =  ((ControlStructuresContext)_localctx).shortIfStatement.value;
				}
				break;
			case SWITCH:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				((ControlStructuresContext)_localctx).switchCaseStatement = switchCaseStatement();
				((ControlStructuresContext)_localctx).value =  ((ControlStructuresContext)_localctx).switchCaseStatement.value;
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				((ControlStructuresContext)_localctx).forLoop = forLoop();
				((ControlStructuresContext)_localctx).value =  ((ControlStructuresContext)_localctx).forLoop.value;
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 5);
				{
				setState(79);
				((ControlStructuresContext)_localctx).whileLoop = whileLoop();
				((ControlStructuresContext)_localctx).value =  ((ControlStructuresContext)_localctx).whileLoop.value;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public ast.Expression value;
		public Token VARNAME;
		public TerminalNode VARNAME() { return getToken(ScriptLanguageParser.VARNAME, 0); }
		public TerminalNode INT() { return getToken(ScriptLanguageParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(ScriptLanguageParser.DOUBLE, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==DOUBLE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(85);
			((DeclarationContext)_localctx).VARNAME = match(VARNAME);
			 ((DeclarationContext)_localctx).value =  new ast.Assignment(new ast.Identifier((((DeclarationContext)_localctx).VARNAME!=null?((DeclarationContext)_localctx).VARNAME.getText():null))); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public ast.Expression value;
		public Token VARNAME;
		public ExpContext exp;
		public TerminalNode VARNAME() { return getToken(ScriptLanguageParser.VARNAME, 0); }
		public TerminalNode ASSIGN() { return getToken(ScriptLanguageParser.ASSIGN, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode INT() { return getToken(ScriptLanguageParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(ScriptLanguageParser.DOUBLE, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INT || _la==DOUBLE) {
				{
				setState(88);
				_la = _input.LA(1);
				if ( !(_la==INT || _la==DOUBLE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(91);
			((AssignmentContext)_localctx).VARNAME = match(VARNAME);
			setState(92);
			match(ASSIGN);
			setState(93);
			((AssignmentContext)_localctx).exp = exp();
			 ((AssignmentContext)_localctx).value =  new ast.Assignment(new ast.Identifier((((AssignmentContext)_localctx).VARNAME!=null?((AssignmentContext)_localctx).VARNAME.getText():null)), ((AssignmentContext)_localctx).exp.value); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public ast.Expression value;
		public ExpContext fstop;
		public CommandContext nxtop;
		public CommandContext nxtop2;
		public TerminalNode IF() { return getToken(ScriptLanguageParser.IF, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(ScriptLanguageParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(ScriptLanguageParser.LBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(ScriptLanguageParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(ScriptLanguageParser.RBRACE, i);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(ScriptLanguageParser.ELSE, 0); }
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(IF);
			setState(97);
			((IfStatementContext)_localctx).fstop = exp();
			((IfStatementContext)_localctx).value = new ast.If(((IfStatementContext)_localctx).fstop.value);
			setState(99);
			match(LBRACE);
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100);
				((IfStatementContext)_localctx).nxtop = command();
				((ast.If)_localctx.value).addDoExpression(((IfStatementContext)_localctx).nxtop.value);
				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << INT) | (1L << DOUBLE) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << SWITCH) | (1L << LPAR) | (1L << VARNAME))) != 0) );
			setState(107);
			match(RBRACE);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(108);
				match(ELSE);
				setState(109);
				match(LBRACE);
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << INT) | (1L << DOUBLE) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << SWITCH) | (1L << LPAR) | (1L << VARNAME))) != 0)) {
					{
					{
					setState(110);
					((IfStatementContext)_localctx).nxtop2 = command();
					((ast.If)_localctx.value).addElseExpression(((IfStatementContext)_localctx).nxtop2.value);
					}
					}
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(120);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShortIfStatementContext extends ParserRuleContext {
		public ast.Expression value;
		public ExpContext fstop;
		public CommandContext nxtop;
		public CommandContext nxtop2;
		public List<TerminalNode> LPAR() { return getTokens(ScriptLanguageParser.LPAR); }
		public TerminalNode LPAR(int i) {
			return getToken(ScriptLanguageParser.LPAR, i);
		}
		public List<TerminalNode> RPAR() { return getTokens(ScriptLanguageParser.RPAR); }
		public TerminalNode RPAR(int i) {
			return getToken(ScriptLanguageParser.RPAR, i);
		}
		public TerminalNode KERDOJEL() { return getToken(ScriptLanguageParser.KERDOJEL, 0); }
		public TerminalNode COLON() { return getToken(ScriptLanguageParser.COLON, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public ShortIfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shortIfStatement; }
	}

	public final ShortIfStatementContext shortIfStatement() throws RecognitionException {
		ShortIfStatementContext _localctx = new ShortIfStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_shortIfStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(LPAR);
			setState(123);
			((ShortIfStatementContext)_localctx).fstop = exp();
			((ShortIfStatementContext)_localctx).value = new ast.If(((ShortIfStatementContext)_localctx).fstop.value);
			setState(125);
			match(RPAR);
			setState(126);
			match(KERDOJEL);
			setState(127);
			match(LPAR);
			setState(131); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(128);
				((ShortIfStatementContext)_localctx).nxtop = command();
				((ast.If)_localctx.value).addDoExpression(((ShortIfStatementContext)_localctx).nxtop.value);
				}
				}
				setState(133); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << INT) | (1L << DOUBLE) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << SWITCH) | (1L << LPAR) | (1L << VARNAME))) != 0) );
			setState(135);
			match(RPAR);
			setState(136);
			match(COLON);
			setState(137);
			match(LPAR);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << INT) | (1L << DOUBLE) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << SWITCH) | (1L << LPAR) | (1L << VARNAME))) != 0)) {
				{
				{
				setState(138);
				((ShortIfStatementContext)_localctx).nxtop2 = command();
				((ast.If)_localctx.value).addElseExpression(((ShortIfStatementContext)_localctx).nxtop2.value);
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SwitchCaseStatementContext extends ParserRuleContext {
		public ast.Expression value;
		public Token VARNAME;
		public FctContext fstop;
		public CommandContext nxtop;
		public CommandContext nxtop2;
		public TerminalNode SWITCH() { return getToken(ScriptLanguageParser.SWITCH, 0); }
		public TerminalNode LPAR() { return getToken(ScriptLanguageParser.LPAR, 0); }
		public TerminalNode VARNAME() { return getToken(ScriptLanguageParser.VARNAME, 0); }
		public TerminalNode RPAR() { return getToken(ScriptLanguageParser.RPAR, 0); }
		public List<TerminalNode> COLON() { return getTokens(ScriptLanguageParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(ScriptLanguageParser.COLON, i);
		}
		public TerminalNode LBRACE() { return getToken(ScriptLanguageParser.LBRACE, 0); }
		public List<TerminalNode> BREAK() { return getTokens(ScriptLanguageParser.BREAK); }
		public TerminalNode BREAK(int i) {
			return getToken(ScriptLanguageParser.BREAK, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ScriptLanguageParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ScriptLanguageParser.SEMICOLON, i);
		}
		public TerminalNode RBRACE() { return getToken(ScriptLanguageParser.RBRACE, 0); }
		public TerminalNode DEFAULT() { return getToken(ScriptLanguageParser.DEFAULT, 0); }
		public List<TerminalNode> CASE() { return getTokens(ScriptLanguageParser.CASE); }
		public TerminalNode CASE(int i) {
			return getToken(ScriptLanguageParser.CASE, i);
		}
		public List<FctContext> fct() {
			return getRuleContexts(FctContext.class);
		}
		public FctContext fct(int i) {
			return getRuleContext(FctContext.class,i);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public SwitchCaseStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_switchCaseStatement; }
	}
